--- a/jstinytest-master/example/reduce.html
+++ b/jstinytest-master/example/reduce.html
@@ -1,100 +1,203 @@
 <script src="../tinytest.js"></script>
 <script>
-    // Prototype implementation:
-        // function reduce (array, callback, startingValue) {
-        //  var resultSoFar = startingValue;
-        //  for (var i = 0;i < array.length; i++) {
-        //      resultSoFar = callback(resultSoFar, array[i], i, array);
-        //  }
-        //  return resultSoFar;
-        //}
+  // Prototype implementation:
+  // function reduce (array, callback, startingValue) {
+  //  var resultSoFar = startingValue;
+  //  for (var i = 0;i < array.length; i++) {
+  //      resultSoFar = callback(resultSoFar, array[i], i, array);
+  //  }
+  //  return resultSoFar;
+  //}
 
-    // array.reduce(callback[,initialValue])
-    // Function signature:
-        // reduce(array, callback[,initialValue])
+  // array.reduce(callback[,initialValue])
+  // Function signature:
+  // reduce(array, callback[,initialValue])
 
-    // Callback parameters:
-        // previousValue
-        // currentValue
-        // currentIndex
-        // array
+  // Callback parameters:
+  // previousValue
+  // currentValue
+  // currentIndex
+  // array
 
-    // Return value:
-        // Returns a single value.
+  // Return value:
+  // Returns a single value.
 
-    function reduce (array, callback, initialValue) {
-        var startingIndex = 0;
+  function reduce(array, callback, initialValue) {
+    var startingIndex = 0;
+    var resultSoFar = initialValue;
+    var length = array.length;
 
-        // Detects if no initialValue
-        if (arguments.length < 3) {
-            startingIndex++;
-        }
+    // Detects if no initialValue
+    if (arguments.length < 3) {
+      if (Object.keys(array).length === 0) {
+        throw new TypeError("Reduce of empty array with no initial value!");
+      }
 
-        for (var i = startingIndex;i < array.length; i++) {
-            callback(initialValue, array[i], i);
-        }
+      if (Object.keys(array).length === 0) {
+        var onlyIndex = Object.keys(array)[0];
+        var onlyElement = array[onlyIndex];
+
+        return onlyElement;
+      }
+
+      while (startingIndex in array === false && startingIndex < length) {
+        startingIndex++;
+      }
+
+      resultSoFar = array[startingIndex];
+      startingIndex++;
+    } else {
+      if (Object.keys(array).length === 0) return initialValue;
     }
 
-    tests({
-        'If initialValue, callback should run array.length times.' : function () {
-            var numberOfTimeCallbackHasRun = 0;
-            reduce([1,2],function(){
-                numberOfTimeCallbackHasRun++;
-            },0);
-            eq(numberOfTimeCallbackHasRun,2);
-        },
-        'If no initialValue, callback should run array.length - 1 times.' : function () {
-            var numberOfTimeCallbackHasRun = 0;
-            reduce([1,2],function(){
-                numberOfTimeCallbackHasRun++;
-            });
-            eq(numberOfTimeCallbackHasRun,1);
-        },
-        'If initialValue, previousValue should start with initialValue.' : function () {
-            reduce([1],function(previousValue) {
-                eq(previousValue,0);
-            },0);
-        },
-        'If initialValue, currentValue should start with array[0].' : function () {
-            reduce([1],function(previousValue,currentValue) {
-                eq(currentValue,1);
-            },0);
-        },
-        'If initialValue, callback will starts at index 0.' : function () {
-            reduce([1],function(previousValue,currentValue, currentIndex) {
-                eq(currentIndex,0);
-            },0);
-        },
+    for (var i = startingIndex; i < array.length; i++) {
+      if (i in array) {
+        resultSoFar = callback(resultSoFar, array[i], i, array);
+      }
+    }
 
-        'If no initialValue, previousValue should start with array[0].' : function () {
-            fail();
-        },
-        'If no initialValue, currentValue should start with array[1].' : function () {
-            fail();
-        },
-        'If no initialValue, callback will start at index 1.' : function () {
-            fail();
-        },
+    return resultSoFar;
+  }
 
-        'If no initialValue, and array has one element, it should return that element without calling callback.' : function () {
-            fail();
+  tests({
+    "If initialValue, callback should run array.length times.": function () {
+      var numberOfTimeCallbackHasRun = 0;
+      reduce(
+        [1, 2],
+        function () {
+          numberOfTimeCallbackHasRun++;
         },
-        'If initialValue, and array is empty, return initialValue withouc calling callback.' : function () {
-            fail();
+        0
+      );
+      eq(numberOfTimeCallbackHasRun, 2);
+    },
+    "If no initialValue, callback should run array.length - 1 times.": function () {
+      var numberOfTimeCallbackHasRun = 0;
+      reduce([1, 2], function () {
+        numberOfTimeCallbackHasRun++;
+      });
+      eq(numberOfTimeCallbackHasRun, 1);
+    },
+    "If initialValue, previousValue should start with initialValue.": function () {
+      reduce(
+        [1],
+        function (previousValue) {
+          eq(previousValue, 0);
         },
+        0
+      );
+    },
+    "If initialValue, currentValue should start with array[0].": function () {
+      reduce(
+        [1],
+        function (previousValue, currentValue) {
+          eq(currentValue, 1);
+        },
+        0
+      );
+    },
+    "If initialValue, callback will starts at index 0.": function () {
+      reduce(
+        [1],
+        function (previousValue, currentValue, currentIndex) {
+          eq(currentIndex, 0);
+        },
+        0
+      );
+    },
 
-        'It should actually reduce.' : function () {
-            fail();
-        },
-        'It should exclude holes.' : function () {
-            fail();
-        },
-        'If array is empty, and no initialValue, throw TypeError.' : function () {
-            fail();
-        },
-        'It should pass array as fourth argument to callback.' : function () {
-            fail();
-        },
-    });
+    "If no initialValue, previousValue should start with array[0].": function () {
+      reduce([1, 2], function (previousValue) {
+        eq(previousValue, 1);
+      });
+    },
 
+    "If no initialValue, currentValue should start with array[1].": function () {
+      reduce([1, 2], function (previousValue, currentValue) {
+        eq(currentValue, 2);
+      });
+    },
+
+    "If no initialValue, callback will start at index 1.": function () {
+      reduce([1, 2], function (previousValue, currentValue, currentIndex) {
+        eq(currentIndex, 1);
+      });
+    },
+
+    "If initialValue, and array is empty, return initialValue withouc calling callback.": function () {
+      var initialValue = 0;
+      var numberOfTimeCallbackHasRun = 0;
+      var reduceResult = reduce(
+        [, , , ,],
+        function () {
+          numberOfTimeCallbackHasRun++;
+        },
+        0
+      );
+      eq(reduceResult, 0);
+      eq(numberOfTimeCallbackHasRun, 0);
+    },
+
+    "If no initialValue, and array has one element, it should return that element without calling callback.": function () {
+      var initialValue = 0;
+      var numberOfTimeCallbackHasRun = 0;
+      var reduceResult = reduce([1], function () {
+        numberOfTimeCallbackHasRun++;
+      });
+      eq(reduceResult, 1);
+      eq(numberOfTimeCallbackHasRun, 0);
+    },
+
+    "It should actually reduce.": function () {
+      var sum = reduce(
+        [1, 2, 3],
+        function (a, b) {
+          return a + b;
+        },
+        0
+      );
+
+      eq(sum, 6);
+    },
+    "It initialValue, it should exclude holes.": function () {
+      //debugger;
+      var sum = reduce(
+        [, 1, , 2, 3],
+        function (a, b) {
+          return a + b;
+        },
+        0
+      );
+
+      eq(sum, 6);
+    },
+    "It no nitialValue, it should exclude holes.": function () {
+      //debugger;
+      var sum = reduce([, 1, , 2, 3], function (a, b) {
+        return a + b;
+      });
+
+      eq(sum, 6);
+    },
+    "If array is empty, and no initialValue, throw TypeError.": function () {
+      var isTypeError;
+      try {
+        reduce([], function () {});
+      } catch (e) {
+        isTypeError = e instanceof TypeError;
+      }
+      eq(isTypeError, true);
+    },
+    "It should pass array as fourth argument to callback.": function () {
+      var testArray = [1, 2];
+      reduce(testArray, function (
+        previousValue,
+        currentValue,
+        currentIndex,
+        arrayToReduce
+      ) {
+        eq(arrayToReduce, testArray);
+      });
+    },
+  });
 </script>
